--- a/calculator.css
+++ b/calculator.css
@@ -11,3 +11,65 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.calculator {
+    width: 25%;
+    border-radius: 10px;
+    overflow: hidden; 
+    text-align: right;
+    box-shadow: 7px 7px 7px 7px rgba(0,0,0,0.5);
+}
+ 
+.display {
+    width: 100%;
+    height: 20vh;
+    background: #222;
+    color: #fff;
+}
+
+.input {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+button {
+    border: none;
+    background-color: #fff;
+    padding: 1.6rem;
+    font-size: 20px;
+    transition: all 0.3 ease-in-out;
+    cursor: pointer;
+}
+
+button:hover {
+    font-weight: bold;
+    transform: scale(1);
+}
+
+.output {
+    font-size: 28px;
+    padding: 25px;
+}
+
+.result {
+    font-size: 18px;
+    padding: 25px;
+}
+
+@keyframes big {
+    0% {
+        font-size: 18px;
+    }
+    100% {
+        font-size: 30px;
+    }
+}
+
+@keyframes small {
+    0% {
+        font-size: 28px;
+    }
+    100% {
+        font-size: 18px;
+    }
+}
